--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "deploy-docs": "ts-node scripts/gh-pages-publish",
     "srelease-prepare": "ts-node scripts/semantic-release-prepare",
     "report-coverage": "jest --coverage && coveralls < coverage/lcov.info",
+    "commit": "git-cz",
     "prepush": "npm run test:prod && npm run build",
     "commitmsg": "commitlint -E HUSKY_GIT_PARAMS",
     "semantic-release": "semantic-release"
@@ -71,38 +72,46 @@
     "semi": false,
     "singleQuote": true
   },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "homepage": "https://github.com/adornala/aForms#readme",
   "devDependencies": {
-    "ts-node": "^9.1.1",
-    "rollup": "^2.36.1",
-    "coveralls": "^3.1.0",
-    "jest": "^26.6.3",
-    "@types/lodash.camelcase": "^4.3.6",
-    "@types/jest": "^26.0.20",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/pluginutils": "^4.1.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-typescript": "^8.1.0",
+    "@babel/core": "^7.12.10",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-replace": "^2.3.4",
-    "rollup-plugin-json": "^4.0.0",
+    "@rollup/plugin-typescript": "^8.1.0",
+    "@rollup/pluginutils": "^4.1.0",
+    "@types/jest": "^26.0.20",
+    "@types/lodash.camelcase": "^4.3.6",
+    "colors": "^1.3.2",
+    "coveralls": "^3.1.0",
+    "git-cz": "^4.7.6",
+    "husky": "^4.3.7",
+    "jest": "^26.6.3",
+    "lodash.camelcase": "^4.3.0",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.36.1",
     "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "semantic-release": "^17.3.1",
-    "colors": "^1.3.2",
-    "@babel/core": "^7.12.10",
+    "shelljs": "^0.8.4",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
     "tslint": "^6.1.3",
-    "ts-jest": "^26.4.4",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
-    "rimraf": "^3.0.2",
-    "shelljs": "^0.8.4",
     "typedoc": "^0.20.13",
-    "typescript": "^4.1.3",
-    "husky": "^4.3.7",
-    "lodash.camelcase": "^4.3.0",
-    "prettier": "^2.2.1"
+    "typescript": "^4.1.3"
   }
 }
