--- a/.github/workflows/workflow-dispatch.yml
+++ b/.github/workflows/workflow-dispatch.yml
@@ -8,6 +8,6 @@ on:
         type: string
 jobs:
   job1:
-    uses: ./.github/workflows/nested.yml
+    uses: ./.github/workflows/job2.yml
     with:
       version: ${{ inputs.version }}
